# ara-archived

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/find/: arrow.cmake  gtest.cmake  rapidjson.cmake
conda/: ara_dev.sh  ara_dev.yml
include/ara/common/: errors.h  types.h  utilities.h
include/ara/data/: column.h  column_factories.h  column_scalar.h  column_vector.h  fragment.h
include/ara/driver/: driver.h  option.h
include/ara/execution/: context.h  executor.h  memory_resource.h  pipeline.h
include/ara/expression/: aggregation.h  binary_op.h  expression_visitor.h  expressions.h  literal.h  ti_unary_op.h  unary_op.h
include/ara/kernel/: aggregate.h  bucket_aggregate.h  filter.h  hash_join.h  kernel.h  limit.h  project.h  sort.h  sources.h  unions.h
include/ara/planning/: planner.h
include/ara/relational/: parsers.h  rel_visitor.h  rels.h
include/ara/type/: data_type.h
src/c/: api.cpp  bridge.cpp
src/data/: column_factories.cpp  fragment.cpp
src/driver/: driver.cpp  option.cpp
src/execution/: context.cpp  executor.cpp  memory_resource.cpp  pipeline.cpp
src/expression/: aggregation.cpp  binary_op.cpp  expressions.cpp  extract_year.cpp  extract_year.cu  extract_year.h  literal.cpp  ti_unary_op.cpp  unary_op.cpp
src/kernel/: aggregate.cpp  aggregate_helper.cpp  aggregate_helper.h  bucket_aggregate.cpp  filter.cpp  hash_join.cpp  helper.cpp  helper.h  kernel.cpp  limit.cpp  project.cpp  sort.cpp  sources.cpp  unions.cpp
src/planning/: explainer.cpp  explainer.h  hash_join_breaker.cpp  hash_join_breaker.h  pipeline_generator.cpp  pipeline_generator.h  planner.cpp  rel_deep_copy_visitor.h  validators.cpp  validators.h
src/relational/: parsers.cpp
src/type/: data_type.cpp
tests/: CMakeLists.txt
tests/execution/: execution_tests.cpp  table_helper.h
tests/expression/: expression_tests.cpp
tests/kernel/: aggregate_tests.cpp  filter_tests.cpp  join_tests.cpp  kernel_helper.h  limit_tests.cpp  project_tests.cpp  sort_tests.cpp  union_tests.cpp
tests/planning/: explain_tests.cpp
tests/relational/: parser_test.cpp
tests/test_common/: rels.h
tests/utilities/: data_helper.cpp  data_helper.h  execution_helper.h  rel_helper.cpp  rel_helper.h
tests/utilities/database/: database.h  evenly_parallel_c_driver.h  evenly_parallel_cpp_driver.h  sinks.h  table.h
